alignment fixes

--- a/style.css
+++ b/style.css
@@ -13,8 +13,16 @@
   }
 }
 
+h3 {
+    color: white;
+    font-family: HarmonyOS;
+}
+
 body {
     background-color: #2b2a2a;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 .memo-icon {
     display: block;
@@ -49,9 +57,11 @@ body {
 
 .icons-grid {
     display: grid;
-    grid-template-columns: repeat(5, minmax(0, 1fr));
+    grid-template-columns: repeat(5, 1fr);
+    align-items: start;
     gap: 20px;
     height: auto;
+    width: 50%;
 }
 
 .memo-text {
@@ -65,6 +75,7 @@ body {
     align-items: center;
     text-align: center;
     flex-direction: column;
+    height: auto;
 }
 
 p {
